# TableOfLife

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
Adapter/: Adapter.cpp  Adapter.h  Adapter_test.cpp
Client/: Client.h  main.cpp
Creater/: SimpleCreator_test.cpp
Creator/: Creator_test.cpp  ICreator.h  RandomCreator.h  SimpleCreator.h
Database/: Database.cpp  Database.h
GABuilder/: Builder.h  Builder_test.cpp
GenAlgo/: GA.h  GA_test.cpp
General/: General.h
Genome/: Genome.h  Genome_test.cpp
Gtests/: Adapter_test.cpp  Builder_test.cpp  Creator_test.cpp  Database_test.cpp  GA_test.cpp  Genome_test.cpp  Manager_test.cpp  Mater_test.cpp  Mutator_test.cpp  ParserToHuman_test.cpp  PatternMaker_test.cpp  Reporter_test.cpp  Selector_test.cpp  Simulator_test.cpp  TestParserToGA.cpp  TestQueue.cpp  TestServer.cpp  TestToGA.cpp  main.cpp
IDatabase/: Database.cpp  Database.h  Database_test.cpp  IDatabase.h
IDatabase/TestDatabase/: TestDatabase.cpp  TestDatabase.h
Manager/: Manager.cpp  Manager.h  Manager_test.cpp
Mater/: IMater.h  Mater_test.cpp  SimpleMater.h  SimpleMater_test.cpp  TwoDotsMater.h
Mutator/: IMutator.h  Mutator_test.cpp  ReverseMutator.h  SimpleMutator.h  SimpleMutator_test.cpp
ParserGAtoHuman/: ParserGAtoHuman.cpp  ParserGAtoHuman.h  ParserGAtoHuman_test.cpp
ParserToGA/: ParserToGA.cpp  ParserToGA.h
ParserToHuman/: ParserToHuman.cpp  ParserToHuman.h  ParserToHuman_test.cpp
PatternMaker/: PatternMaker.cpp  PatternMaker.h  PatternMaker_test.cpp
PyClient/TableOfLife/: db.sqlite3  manage.py
PyClient/TableOfLife/TableOfLife/: asgi.py  settings.py  urls.py  wsgi.py
PyClient/TableOfLife/app/: forms.py  urls.py  views.py
PyClient/TableOfLife/app/templates/app/: ask.html  base.html  index.html  post.html
Queue/: Queue.cpp  Queue.h
Reporter/: Reporter.cpp  Reporter.h  Reporter_test.cpp
Request/: Request.h
Result/: Result.h
Selector/: ISelector.h  Selector.h  Selector_test.cpp  TopSelector.h
Server/: Server.cpp  Server.h
Simulator/: ISimulator.h  Simulator.h  Simulator_test.cpp  TimeTableSimulator.h
Solution/: Solution.h
